--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/Skycoder42/paxchange
 publish_to: none
 
 environment:
-  sdk: ^3.3.0
+  sdk: ^3.4.0
 
 platforms:
   linux:
@@ -14,22 +14,22 @@ executables:
   paxchange:
 
 dependencies:
-  args: ^2.4.2
-  dart_console2: ^3.0.0
+  args: ^2.5.0
+  dart_console: ^4.1.0
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   path: ^1.9.0
   riverpod: ^2.5.1
 
 dev_dependencies:
-  build_runner: ^2.4.8
+  build_runner: ^2.4.10
   custom_lint: ^0.6.4
   dart_pre_commit: ^5.3.0
-  dart_test_tools: ^5.6.2
-  freezed: ^2.4.7
-  json_serializable: ^6.7.1
+  dart_test_tools: ^5.11.0
+  freezed: ^2.5.3
+  json_serializable: ^6.8.0
   mocktail: ^1.0.3
-  test: ^1.25.2
+  test: ^1.25.5
   tuple: ^2.0.2
 
 aur:
